--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,41 @@
-name: CI Build
+name: 'C++ CI'
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+      - feature/github_actions
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-
+    runs-on: ubuntu-latest
+    permissions: write-all
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up C++ Compiler on Ubuntu
-      run: sudo apt-get install g++
-      if: matrix.os == 'ubuntu-latest'
-
-    - name: Build on Ubuntu
-      run: |
-        g++ -o HelloWorld main.cpp
-        ./HelloWorld
-      if: matrix.os == 'ubuntu-latest'
-
-    - name: Set up MinGW on Windows
-      run: |
-        choco install mingw
-      if: matrix.os == 'windows-latest'
-
-    - name: Build on Windows
-      run: |
-        g++ -o HelloWorld main.cpp
-        ./HelloWorld.exe
-      shell: cmd
-      if: matrix.os == 'windows-latest'
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
+      - run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
+      - run: cmake . -DPATCH_VERSION=${{ github.run_number }}
+      - run: cmake --build .
+      - run: cmake --build . --target test
+      - run: cmake --build . --target package
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.run_number }}
+          release_name: Release ${{ github.run_number }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./helloworld-0.0.${{ github.run_number }}-Linux.deb
+          asset_name: helloworld-0.0.${{ github.run_number }}-Linux.deb
+          asset_content_type: application/vnd.debian.binary-package
